--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,11 @@
     {% include 'include/Navbar.html'%}
 
     <div class="jumbotron">
-      
+    {% include 'include/Massages.html' %}
     {% block contact %}
     {% endblock %}
 
-    {% block content %}
+    {% block user %}
     {% endblock %}
 
     </div>
