--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block user %}
     <h4>Register</h4>
-    <form action="" method="post" class= "col-md-3">
+    <form action="" method="post" class= "col-md-3" novalidate>
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Register">
