--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,10 @@
     {% block contact %}
     {% endblock %}
 
-    {% block user %}
+    {% block user-register %}
+    {% endblock %}
+
+    {% block user-login %}
     {% endblock %}
 
     </div>
