--- a/templates/include/Navbar.html
+++ b/templates/include/Navbar.html
@@ -4,6 +4,7 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="{% url 'home:home' %}">Home</a>
         <a class="nav-link active" href="{% url 'account:user_register' %}">Sigh</a>
+        <a class="nav-link active" href="{% url 'account:user_login' %}">login</a>
       </div>
     </div>
   </nav>
