--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
 
     <div class="jumbotron">
     {% include 'include/Massages.html' %}
+
     {% block contact %}
     {% endblock %}
 
@@ -26,6 +27,9 @@
     {% endblock %}
 
     {% block user-login %}
+    {% endblock %}
+
+    {% block detail-post %}
     {% endblock %}
 
     </div>
