Create post and 404 not found

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <div class="jumbotron">
     {% include 'include/Massages.html' %}
 
-    {% block contact %}
+    {% block content %}
     {% endblock %}
 
     {% block user-register %}
