--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
 
 {% block user-login %}
-    <h3 class="center">{{ user.username }}</h3>
+    <h3 class="text-center">{{ user.username }}</h3>
     <div class="card">
+   
         {% for post in posts %}
-            <a href="{% url 'post:post_detail' post.id  post.slug %}" class="card-body">{{ post.caption|truncatewords:5}}</a>
+            <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.caption|truncatewords:5}}</a>
         {% endfor %}
+        
     </div>
+    {% if request.user.id == user.id %}
+        <a href="{% url 'post:post_create' %}" class="btn btn-info">Create</a>
+    {% endif %}
 {% endblock %}
