--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,10 +1,10 @@
 {% extends 'base.html'%}
 
-{% block contact %}
+{% block content %}
     <p>Index home</p>
         <div class="card">
             {% for post in Posts %}
-                <a href="{% url 'post:post_detail' post.id  post.slug %}" class="card-body">{{ post.caption|truncatewords:5}}</a>
+                <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.caption|truncatewords:5}}</a>
             {% endfor %}
         </div>
 {% endblock %}
