--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -12,4 +12,9 @@
     {% if request.user.id == user.id %}
         <a href="{% url 'post:post_create' %}" class="btn btn-info">Create</a>
     {% endif %}
+    {% if request.user.id != user.id and not is_following %}
+        <a href="{% url 'account:user_follow' user.id %}" class="btn btn-primery" > Follow </a>
+    {% elif request.user.id != user.id and is_following  %}
+        <a href="{% url 'account:user_unfollow' user.id %}" class="btn btn-primery">Unfollow </a>
+    {% endif %}
 {% endblock %}
