--- a/post/templates/post/details.html
+++ b/post/templates/post/details.html
@@ -6,7 +6,7 @@
     <p>{{post.caption}}</p><hr>
 
     {% if request.user.is_authenticated %}
-
+        <a href="{% url 'post:like_post' post.id %}" class="{% if can_like %}disabled {% endif %}btn btn-info">Like {{post.count_likes}}</a>
         <form action="" method="post">
             {% csrf_token %}
             {{form.as_p}}
