--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -11,6 +11,7 @@
     </div>
     {% if request.user.id == user.id %}
         <a href="{% url 'post:post_create' %}" class="btn btn-info">Create</a>
+        <a href="{% url 'account:edit_user' %}" class="btn btn-info">Edit Profile</a>
     {% endif %}
     {% if request.user.id != user.id and not is_following %}
         <a href="{% url 'account:user_follow' user.id %}" class="btn btn-primery" > Follow </a>
