--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,5 @@
-{% extends 'base.html' %}
 
-{% block content %}
 <h1>Error 404</h1>
-<p>Page not found</p>
+<h3>Page not found , Back home <a href="{% url 'home:home' %}">Home</a></h3>
 
-{% endblock %}
+
